test/apps/errors/src/routes/nope.json.js
export function get(req, res) {
	res.writeHead(500);
	res.end('nope');
}
